--- a/package.json
+++ b/package.json
@@ -1,15 +1,19 @@
 {
-  "name": "nodejs",
+  "name": "lesson4",
   "version": "1.0.0",
   "description": "",
+  "main": "cli.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "start": "node cli.js"
   },
+  "bin": {
+    "reader": "cli.js"
+  },
+  "keywords": [],
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "colors": "^1.4.0",
-    "luxon": "^2.0.2",
-    "node-notifier": "^10.0.0"
+    "inquirer": "^8.2.0",
+    "yargs": "^17.2.1"
   }
 }
