--- a/package.json
+++ b/package.json
@@ -1,19 +1,18 @@
 {
-  "name": "lesson4",
+  "name": "nodejs",
   "version": "1.0.0",
   "description": "",
-  "main": "cli.js",
   "scripts": {
-    "start": "node cli.js"
+    "test": "echo \"Error: no test specified\" && exit 1"
   },
-  "bin": {
-    "reader": "cli.js"
-  },
-  "keywords": [],
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "inquirer": "^8.2.0",
-    "yargs": "^17.2.1"
+    "colors": "^1.4.0",
+    "luxon": "^2.0.2",
+    "node-notifier": "^10.0.0"
+  },
+  "devDependencies": {
+    "nodemon": "^2.0.14"
   }
 }
