--- a/package.json
+++ b/package.json
@@ -1,18 +1,16 @@
 {
-  "name": "nodejs",
+  "name": "lesson6",
   "version": "1.0.0",
-  "description": "",
+  "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
+  "keywords": [],
   "author": "",
   "license": "ISC",
+  "description": "",
   "dependencies": {
-    "colors": "^1.4.0",
-    "luxon": "^2.0.2",
-    "node-notifier": "^10.0.0"
-  },
-  "devDependencies": {
-    "nodemon": "^2.0.14"
+    "nodemon": "^2.0.14",
+    "socket.io": "^4.3.2"
   }
 }
